# catlog3

./: CMakeLists.txt  ConsoleLogHandler.hpp  Formatter.hpp  GenericType.hpp  LogChannel.cpp  LogChannel.hpp  LogFactory.cpp  LogFactory.hpp  LogHandler.cpp  LogHandler.hpp  LogLevel.cpp  LogLevel.hpp  LogRecord.cpp  LogRecord.hpp  Logger.cpp  Logger.hpp  README.md  Time.cpp  Time.hpp  test.cpp
